# ucu_acs_project

./: CMakeLists.txt  Presentation_1.pptx  README.md  main.cpp  script.py  visualization.py
code/: CMakeLists.txt  main.cpp  script.py
inc/: get_frames.h  process_frame.h  que.h  time_measurement.h  write_to_file.h
src/: get_frames.cpp  process_frame.cpp  write_to_file.cpp
